# STM32-OV7670

./: .gitignore  Cargo.toml  README.md  debug.sh  doc.md
src/: main.py  main.rs
