[package]
name = "ov7670"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
nb = "1"
stm32f1 = "0.14.0"
embedded-hal = { features = ["unproven"], version = "0.2.6" }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
generic-array = "0.14.2"
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

embedded-graphics = "0.7.1"
num-format = { version = "0.4.0", default-features = false }


ssd1306 = "0.7.0"
display-interface = "0.4.1"
display-interface-i2c = "0.4.0"
display-interface-spi = "0.4.1"



[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]
